# fixdecoder2

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  NOTICE.md  README.md  build.rs  ci.sh  ci_helper.sh  invalidfix.txt  scan.sh  sonar-project.properties
.github/workflows/: ci.yml  rust.yml
ci/: bump_version.py  ci_helper.sh  compute_lockfile_hash.py  convert_rustsec_to_sonar.py  next_patch.py  update_readme.py
licenses/: QUICKFIX-BSD-2-Clause.txt
pcap2fix/: Cargo.toml
pcap2fix/src/: main.rs
pcap2fix/tests/: roundtrip.rs
resources/: NOTICE.md
resources/messages/: usage_en.txt
scripts/: capture_and_decode.sh  slowcat.sh
src/: main.rs
src/decoder/: colours.rs  display.rs  fixparser.rs  layout.rs  mod.rs  prettifier.rs  schema.rs  summary.rs  tag_lookup.rs  validator.rs
src/fix/: dictionaries.rs  mod.rs  obfuscator.rs  sensitive.rs
tests/: cli.rs
