[package]
name = "fixdecoder"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
atty = "0.2"
chrono = { version = "0.4", default-features = true }
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
quick-xml = { version = "0.36", features = ["serialize"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
terminal_size = "0.3"
roxmltree = "0.20"
rayon = "1.10"

[build-dependencies]
rustc_version = "0.4"
