[package]
name = "fixdecoder"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = true }
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
quick-xml = { version = "0.36", features = ["serialize"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
terminal_size = "0.4.3"
roxmltree = "0.21.1"
rayon = "1.10"
ctrlc = "3.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[build-dependencies]
rustc_version = "0.4"
